--- a/src/components/views/Modal.astro
+++ b/src/components/views/Modal.astro
@@ -50,7 +50,7 @@ const contentData = {
 
     {Object.entries(contentData).map(([id, content]) => (
         <section id={`modal-content-${id}`} class="modal-content max-sm:flex-col gap-8 justify-center items-center sm:h-full hidden">
-            <div class="sm:flex-1">
+            <div class="sm:flex-1 flex justify-end">
                 <Image src={content.image} alt={content.title} class="w-full h-auto rounded-xl max-w-md" />
             </div>
             <div class="flex flex-col gap-4 sm:flex-1">
