--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,8 +11,8 @@ const commonClasses = "main-section contents"
 ---
 
 <Layout>
-	<section class={`${commonClasses}`} id="0"><Me /></section>
-  <section class={`${commonClasses} hidden`} id="1"><Welcome /></section>
+  <section class={`${commonClasses}`} id="0"><Welcome /></section>
+	<section class={`${commonClasses} hidden`} id="1"><Me /></section>
   <section class={`${commonClasses} hidden`} id="2"><Built /></section>
 	<section class={`${commonClasses} hidden`} id="3"><Currently /></section>
 	<section class={`${commonClasses} hidden`} id="4"><Random /></section>
