--- a/src/components/atoms/Controls.astro
+++ b/src/components/atoms/Controls.astro
@@ -3,7 +3,7 @@ import Image from "astro/components/Image.astro";
 import controlsImage from "../../assets/keys.webp";
 ---
 
-<div id="controls" class="max-sm:hidden flex flex-col items-center justify-center fixed top-10 left-10">
+<div id="controls" class="max-sm:hidden opacity-0 flex flex-col items-center justify-center fixed top-10 left-10">
     <Image class="w-[150px] aspect-square" src={controlsImage} alt="Controls" width={1024} height={1024} quality={10} />
     <p class="text-body-m font-family-vt323">Use wasd keys to move</p>
     <p class="text-body-m font-family-vt323">And <span class="border p-1">esc</span> to quit</p>
@@ -14,6 +14,7 @@ import controlsImage from "../../assets/keys.webp";
 
     const controls = document.getElementById('controls')
     gameOn.subscribe(value => {
-        controls?.classList.toggle('hidden', !value)
+        // When value add flex, hide hidden
+        controls?.classList.toggle('opacity-100', value)
     })
 </script>
