--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -21,7 +21,7 @@ import "../styles/global.css";
 		<title>Daniel Jimenez</title>
 	</head>
 	<body class="cursor-(--cursor-custom) selection:bg-primary-red selection:text-primary-white">
-		<main id="main-frame" class="bg-primary-black h-screen w-screen flex items-center justify-center transition-all duration-200 p-6">
+		<main id="main-frame" class="bg-primary-black h-dvh w-screen flex items-center justify-center transition-all duration-200 p-6">
 			<div id="main-frame-content" class="bg-primary-white rounded-3xl w-full h-full relative">
 				<slot />
 				<Slider />
