--- a/src/components/views/Random.astro
+++ b/src/components/views/Random.astro
@@ -34,7 +34,7 @@ const imageData = [
 
     <div class="fixed left-1/2 top-1/2 -translate-x-1/2 -translate-y-1/2">
         <div class="relative">
-            <Image src={iqBellDistribution} alt="iq bell distribution" class="max-sm:w-xs w-full max-w-4xl" />
+            <Image src={iqBellDistribution} alt="iq bell distribution" class="max-sm:w-[280px] w-full max-w-4xl" />
             
             {imageData.map((image) => (
                 <button class={image.classes} id={image.id}>
