--- a/src/components/views/Built.astro
+++ b/src/components/views/Built.astro
@@ -12,10 +12,10 @@ const logos = Object.values(
 
 <Slide>
     <SlideHeader title="Built" subtitle="Brands I've worked for" />
-    <div class="grid grid-cols-2 sm:grid-cols-4 place-items-center gap-6 sm:gap-8 max-h-[60vh] w-full mt-10 overflow-y-auto">
+    <div class="grid grid-cols-2 sm:grid-cols-4 place-items-center gap-6 sm:gap-8 max-h-[60vh] w-full max-sm:mt-6 sm:mt-10 overflow-y-auto">
         {
 			logos.map((brand) => (
-				<Image class={"h-16 w-32 sm:h-20 sm:w-40 lg:h-24 lg:w-48 object-contain"} src={brand} alt="Brand logo" />
+				<Image class={"h-12 w-24 sm:h-20 sm:w-40 lg:h-24 lg:w-48 object-contain"} src={brand} alt="Brand logo" />
 			))
         }
     </div>
