add mobile knob player

--- a/src/components/atoms/Contact.astro
+++ b/src/components/atoms/Contact.astro
@@ -1,6 +1,7 @@
 ---
 import WhatsAppDesktop from "./WhatsAppDesktop.astro";
 import WhatsAppMobile from "./WhatsAppMobile.astro";
+import Knob from "./Knob.astro";
 ---
 
 <div class="group">
