--- a/src/components/views/Welcome.astro
+++ b/src/components/views/Welcome.astro
@@ -2,6 +2,7 @@
 import { Quote } from "@lucide/astro";
 import Pacman from "@atoms/Pacman.astro";
 import Controls from "@atoms/Controls.astro";
+import Knob from "@components/atoms/Knob.astro";
 const SOFTWARES_EATING_THE_WORLD_URL = "https://a16z.com/why-software-is-eating-the-world/";
 const SOFTWARE = 'software'
 const IS = 'is'
@@ -30,4 +31,5 @@ const WORLD = 'world'
     </h2>
     <Pacman />
     <Controls />
+    <Knob />
 </div>
