add knob state control

--- a/src/components/atoms/Pacman.astro
+++ b/src/components/atoms/Pacman.astro
@@ -3,7 +3,7 @@
 </button>
 
 <script>
-import { gameOn } from '../../store'
+import { gameOn, knobState } from '../../store'
 import pacmanImage from '../../assets/sprites/pacman.webp'
 import pacmanRightImage from '../../assets/sprites/pacman-right.webp'
 import pacmanLeftImage from '../../assets/sprites/pacman-left.webp'
